--- a/_pages/abenteuer/index.html
+++ b/_pages/abenteuer/index.html
@@ -1,21 +1,22 @@
 ---
 layout: content
 id: abenteuer
-title: Abenteuer & Sport
+title: Für Abenteurer
 nav: true
-nav-order: 3
+nav-order: 2
 content-pages: true
 
 banner:
-  title-sub: Aktivitäten mit maritimen&nbsp;Weitblick
-  title: Abenteuer &&nbsp;Sport
+  title-sub: Entdecken Sie Ihre Leidenschaft für Geschwindigkeit
+  title: Für Abenteurer
+  title-size: banner-title--md
 
 
 summary: "Hier schlägt das Herz der Sportbegeisterten sofort schneller: Kuriose Sportarten wie Road-Tennis treffen auf die traditionelle Segelregatta."
 
 
 
-colour: bg--f-blue
+colour: bg--bv-blue
 intro-title: ""
-intro: "Relaxen und Schlemmen sind genauso leicht auf Barbados wie die vielseitigen Sportmöglichkeiten. Gestalten Sie Ihre Auszeit aktiv mit Surfen, Tauchen oder Fitness."
+intro: "Rasanten Spaß für jedes Alter bietet Abu&nbsp;Dhabi: Auf dem Yas Marina Circuit erleben Sie schnelle Autos auf der legendären Rennstrecke oder blicken hinter die Kulissen der Formel 1. Lassen Sie sich von den Attraktionen der Ferrari World in den Sitz drücken oder bezwingen die Düne Tel Moreeb mit dem Quad. So richtig in Fahrt bringen Sie die Wasserrutschen der vielen Wasserparks und die schnellste Achterbahn der Welt – ein riesen Freizeitvergnügen. "
 ---
