--- a/_pages/angebote/index.html
+++ b/_pages/angebote/index.html
@@ -3,10 +3,11 @@ layout: offers
 id: angebote
 title: Angebote
 nav: true
-nav-order: 7
+nav-order: 6
 
 banner:
-  title-sub: Angebote
-  title: Barbados
+  title-sup: Angebote
+  title: Abu&nbsp;Dhabi
+  title-size: banner-title--lg
 
 ---
