--- a/_pages/kultur/index.html
+++ b/_pages/kultur/index.html
@@ -1,21 +1,21 @@
 ---
 layout: content
 id: kultur
-title: Kultur
+title:  Für Kulturliebhaber
 nav: true
-nav-order: 4
+nav-order: 3
 content-pages: true
 
 banner:
-  title-sub: Karibische Gelassenheit
-  title: Kultur & Geschichte
-  bg-pos: "background-position: 80% center;"
+  title-sub: Magische Momente und orientalischer Zauber
+  title:  Für Kulturliebhaber
+  title-size: banner-title--sm
 
 
 summary: "Die Bajan lieben ihre Outdoor-Kultur: Essen, Sport und relaxen wird am Strand ebenso zelebriert, wie der Stolz auf die Kultur und Geschichte"
 
 
-colour: bg--f-blue
+colour: bg--bv-blue
 intro-title:
-intro: "Barbados, das ist karibische Leichtigkeit gefüllt mit britischem Erbe und dem Einfluss Westafrikas: Diese Lebendigkeit spiegelt sich sowohl in der Kultur als auch in der Lebensweise wider."
+intro: "In Sachen Kunst und Kultur setzt Abu&nbsp;Dhabi mit der weit über die Grenzen des Emirats bestaunten Scheich-Zayid-Moschee, dem Louvre Abu&nbsp;Dhabi auf Saadiyat Island sowie der orientalischen Pracht in der Oasenstadt Al&nbsp;Ain wahre Highlights. Abu&nbsp;Dhabi versetzt uns in Erstaunen mit seiner allgegenwärtigen Melange aus Tradition und Moderne: Entdecken Sie ein Land in dem Träume glamouröse Wirklichkeit geworden sind. "
 ---
