--- a/_pages/natur/index.html
+++ b/_pages/natur/index.html
@@ -1,19 +1,20 @@
 ---
 layout: content
 id: natur
-title: Küsten-Panorama
+title: Für Naturmenschen
 nav: true
-nav-order: 5
+nav-order: 4
 content-pages: true
 
 banner:
-  title-sub: "Die besten Strände"
-  title: "Küsten-Panorama"
+  title-sub: "Erleben Sie Ausflüge zu wilden Exoten"
+  title: "Für Naturmenschen"
+  title-size: banner-title--sm
 
 
 summary: "Tropischer Urwald mit exotischer Artenvielfalt umgeben von der größten Auswahl an traumhaften Sandstränden und wilden Felsen."
 
 
 intro-title: Ein Traum wird wahr
-intro: "Barbados ist ein Paradies für Naturliebhaber und Entdecker. Berauschende Farben und Düfte, seltsame Klänge und Wesen wie aus der Fabelwelt: Das ist pures Tropenabenteuer. "
+intro: "So facettenreich wie exquisit präsentiert sich Abu&nbsp;Dhabi in Sachen Natur. Die tropische Idylle des Mangrovendschungels bietet Schutz für Flamingos und Schildkröten, während öffentliche Strände und Beach Clubs tropische Tagträume am Arabischen Golf versprechen. Ein Tagesausflug in die Wildnis zu exotischen Tieren oder eine Exkursion in die Welt des Nationalvogels, des Falken, werden Ihre Erwartungen übertreffen. "
 ---
