--- a/_pages/index.html
+++ b/_pages/index.html
@@ -4,15 +4,17 @@ id: overview
 nav: true
 nav-order: 1
 nav-title: Übersicht
-title: Karibischer Sehnsuchtsort
+title: Magische Momente
 
 banner:
-  title-sub: Karibischer Sehnsuchtsort
-  title: Barbados
+  title-sup: Magische Momente in
+  title: Abu&nbsp;Dhabi
+  title-size: banner-title--lg
+  bg-pos: "background-position: 28% center;"
 
 
-colour: bg--f-blue
-intro: "An was denken Sie beim Namen Barbados? Karibisches Meer, Sonne, Rhythmen und Rum fallen einem sofort ein. Doch die Insel hat noch vieles mehr zu bieten und ist mit über 92 km unberührter, idyllischer Küste ein erstklassiges Traumziel. Erleben Sie die besondere Atmosphäre und Historie der Städte, spielen Sie Golf oder fahren Sie die herrliche Küste entlang. Diese lebendige Kulturlandschaft, die Freundlichkeit und herzliche Gastfreundschaft der Menschen, vereint mit dem Erbe der Vergangenheit, machen Barbados zu einem großartigen Urlaubstraum. Wir zeigen Ihnen, was Sie auf Barbados erleben können und was diese Insel so reizvoll macht. "
+colour: bg--bv-blue
+intro: "Eine moderne Oase am Arabischen Golf, eingerahmt von tropischen Mangroven&shy;landschaften, mäjestätischen Wüsten und traumhaften Strandparadiesen. Abu&nbsp;Dhabi bietet Urlaub für jeden Geschmack. Geben Sie Vollgas beim Dünen-Bashing mit dem Quad, lassen Sie sich von den Attraktionen der vielen Freizeitparks begeistern oder entschleunigen Sie in gemütlichen Lounge-Betten am Strand. "
 
 
 
