--- a/_pages/natur/index.html
+++ b/_pages/natur/index.html
@@ -7,7 +7,7 @@ nav-order: 4
 content-pages: true
 
 banner:
-  title-sub: "Erleben Sie Ausflüge zu wilden Exoten"
+  title-sub: "Erleben Sie Ausflüge zu wilden&nbsp;Exoten"
   title: "Für Naturmenschen"
   title-size: banner-title--sm
 
