IE compability corrections

--- a/_pages/cities/index.html
+++ b/_pages/cities/index.html
@@ -7,7 +7,7 @@ nav-order: 5
 content-pages: true
 
 banner:
-  title-sub: Wüstenmetropole mit dem gewissen Etwas
+  title-sub: Wüstenmetropole mit dem gewissen&nbsp;Etwas
   title: Für City-Fans
   title-size: banner-title--md
   bg-pos: "background-position: 28% center;"
@@ -18,5 +18,5 @@ summary: "Probieren Sie den echten Rum, das Nationalgericht fliegender Fisch mit
 
 colour: bg--bv-blue
 intro-title:
-intro: "Zu jeder Tageszeit versetzt einen die schillernde Wüstenmetropole in Erstaunen: mit fantasievollen Designs, morgendlichen Spaziergängen über farbenfrohe Souks, exklusiven Shoppingtouren und romantischen Sonnenuntergängen mit Blick auf Abu&nbsp;Dhabis architektonische Wunder – hier wird der Urlaub zum unvergesslichen Spektakel. "
+intro: "Zu jeder Tageszeit versetzt einen die schillernde Wüstenmetropole in Erstaunen: mit fantasievollen Designs, morgendlichen Spaziergängen über farbenfrohe Souks, exklusiven Shopping&shy;touren und romantischen Sonnenuntergängen mit Blick auf Abu&nbsp;Dhabis architektonische Wunder – hier wird der Urlaub zum unvergesslichen Spektakel. "
 ---
