--- a/_pages/abenteuer/index.html
+++ b/_pages/abenteuer/index.html
@@ -7,7 +7,7 @@ nav-order: 2
 content-pages: true
 
 banner:
-  title-sub: Entdecken Sie Ihre Leidenschaft für Geschwindigkeit
+  title-sub: Entdecken Sie Ihre Leidenschaft für&nbsp;Geschwindigkeit
   title: Für Abenteurer
   title-size: banner-title--md
 
